# 8-Puzzle_Solver

./: .gitignore  CMakeLists.txt  README.md  cost.c  cost.h  direction.c  direction.h  hashset.c  hashset.h  main.c  node.c  node.h  puzzle.c  puzzle.h  queue.c  queue.h
.github/workflows/: project-build.yml  valgrind.yml
solve/: bfs.c  bfs.h
